<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context="com.dsource.idc.jellowintl.LanguageSelectActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/lang_sel_scroll_margin_vertical"
        android:layout_marginBottom="@dimen/lang_sel_scroll_margin_vertical"
        android:layout_marginLeft="@dimen/lang_sel_scroll_margin_left"
        android:layout_marginStart="@dimen/lang_sel_scroll_margin_left"
        android:layout_marginRight="@dimen/lang_sel_scroll_margin_right"
        android:layout_marginEnd="@dimen/lang_sel_scroll_margin_right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/lang_sel_parent_margin_right"
            android:layout_marginEnd="@dimen/lang_sel_parent_margin_right">
            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Go to settings of Google TTS and turn off \'Use Wi-Fi only\'. If option is already disabled, please skip this step."
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lang_sel_ll_margin_top">
                <ImageView
                    android:id="@+id/ivAddLang1"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The image below shows the 3 steps involved in setting up the Google text-to-speech engine that is used by Jellow. The image is made up of 3 screenshots of the, “Text to speech output” and “Google TTS settings” within a user’s device. In the first image corresponding to “Text-to-speech output”, there are 2 preferred engines visible, first, the, “Samsung Text-to-Speech engine” and second, the, “Google Text-to-Speech engine”. The user is seen to select the, “Google Text-to-Speech engine” as the first step."
                    tools:ignore="HardcodedText" />
                <ImageView
                    android:id="@+id/ivArrow1"
                    android:layout_width="@dimen/lang_sel_img_ar_width"
                    android:layout_height="@dimen/lang_sel_img_ar_height"
                    android:layout_gravity="center_vertical"
                    android:importantForAccessibility="no"/>
                <ImageView
                    android:id="@+id/ivAddLang2"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The second image corresponds to the second step in this process where the user is seen to now click on the, “Gear” symbol corresponding to the, “Settings” of the, “Google Text-to-Speech engine”"
                    tools:ignore="HardcodedText" />
                <ImageView
                    android:id="@+id/ivArrow2"
                    android:layout_width="@dimen/lang_sel_img_ar_width"
                    android:layout_height="@dimen/lang_sel_img_ar_height"
                    android:layout_gravity="center_vertical"
                    android:importantForAccessibility="no"/>
                <ImageView
                    android:id="@+id/ivAddLang3"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The third image is the third step in this process where now the user is at the, “Google TTS options” screen. The second item on this screen which is a toggle switch for “Use Wi-Fi only” has been highlighted in this image. The user is asked to turn off or disable this switch in this step.”"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
            <Button
                android:id="@+id/btnTTsSetting"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lang_sel_btn_height"
                android:textSize="@dimen/lang_sel_btn_txt_size"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/lang_sel_btn_margin_top"
                android:layout_marginBottom="@dimen/lang_sel_btn_margin_bottom"
                android:paddingLeft="@dimen/lang_sel_btn_padding_horizontal"
                android:paddingRight="@dimen/lang_sel_btn_padding_horizontal"
                android:text="TTS SETTINGS"
                android:onClick="openSpeechSetting"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/txt_title_chgLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Change Default Language:"
                android:layout_marginTop="@dimen/lang_sel_head_margin_top"
                android:layout_marginBottom="@dimen/lang_sel_head_margin_bottom"
                style="@style/defaultTextViewStyle"
                android:fontFamily="@font/mukta_semibold"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/txt_followSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:layout_marginTop="@dimen/lang_sel_tv_margin_vertical_top"
                android:layout_marginBottom="@dimen/lang_sel_tv_step_margin_bottom"
                android:text="You can follow the steps listed below to set a newly added language as the default for Jellow"
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Step 1: Select any downloaded language from the dropdown below:"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <Spinner
                android:id="@+id/selectDownloadedLanguageSpinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lang_sel_spiner_height"
                android:background="@drawable/custom_spinner_view"
                android:minWidth="@dimen/lang_sel_spiner_min_width"
                android:paddingRight="@dimen/lang_sel_spiner_padding_right"
                android:paddingEnd="@dimen/lang_sel_spiner_padding_right"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"/>
            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Step 2: Check if voice data for _ is available on your device. If not please turn on internet and download voice data for selected language. In case process is stalled please check your internet connection and retry"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <ImageView
                android:id="@+id/ivTtsVoiceDat"
                android:layout_width="@dimen/lang_sel_voice_img_width"
                android:layout_height="@dimen/lang_sel_voice_img_height"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                android:layout_marginLeft="@dimen/lang_sel_voice_img_margin_left"
                android:layout_marginStart="@dimen/lang_sel_voice_img_margin_left"
                android:contentDescription="The third image is the third step in this process where now the user is at the, “Google TTS voice data” screen. This screen provides multiple voice options including “French (France)”, “German (Germany)”, “Hindi (India)”, “Hungarian (Hungary)”, and “Indonesian (Indonesia)”. The, “Hindi (India) voice” option is highlighted and shows an option of “Voice set 1” with a size of 19MB that is available for download. The user’s finger is seen to click on the download icon for the voice set 1 for the, “Hindi (India)voice”."
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/btnDownloadVoiceData"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lang_sel_btn_height"
                android:textSize="@dimen/lang_sel_btn_txt_size"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/lang_sel_btn_voice_margin_top"
                android:layout_marginBottom="@dimen/lang_sel_btn_voice_margin_bottom"
                android:paddingLeft="@dimen/lang_sel_btn_padding_horizontal"
                android:paddingRight="@dimen/lang_sel_btn_padding_horizontal"
                android:text="Check voice data"
                android:onClick="openSpeechDataSetting"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Step 3: Set \'Google Text-to-speech (TTS)\' as default TTS engine and set _ as default language of the engine."
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <LinearLayout
                android:id="@+id/llImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/lang_sel_ll_margin_left"
                android:layout_marginStart="@dimen/lang_sel_ll_margin_left"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/ivTtsSetting1"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The image is made up of 3 screenshots of the, “Text to speech output” and “Google TTS voice data” settings within a user’s device. In the first image corresponding to “Text-to-speech output”, there are 2 preferred engines visible, first, the, “Samsung Text-to-Speech engine” and second, the, “Google Text-to-Speech engine”. The user is seen to select the, “Google Text-to-Speech engine”as the first step."
                    tools:ignore="HardcodedText" />
                <ImageView
                    android:id="@+id/ivArrow3"
                    android:layout_width="@dimen/lang_sel_img_ar_width"
                    android:layout_height="@dimen/lang_sel_img_ar_height"
                    android:layout_gravity="center_vertical"
                    android:importantForAccessibility="no"/>
                <ImageView
                    android:id="@+id/ivTtsSetting2"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The second image corresponds to the second step in this process where the user is seen to now click on the, “Gear” symbol corresponding to the, “Settings” of the, “Google Text-to-Speech engine”"
                    tools:ignore="HardcodedText" />
                <ImageView
                    android:id="@+id/ivArrow4"
                    android:layout_width="@dimen/lang_sel_img_ar_width"
                    android:layout_height="@dimen/lang_sel_img_ar_height"
                    android:layout_gravity="center_vertical"
                    android:importantForAccessibility="no"/>
                <ImageView
                    android:id="@+id/ivTtsSetting3"
                    android:layout_width="@dimen/lang_sel_img_width"
                    android:layout_height="@dimen/lang_sel_img_height"
                    android:contentDescription="The third image corresponds to the third step in this process where the user is seen to now click on the, “Language” option on the Google TTS voice data page. The user is seen to set “Hindi(India)” as the default language of the Google Text-to-Speech engine."
                    tools:ignore="HardcodedText"/>
            </LinearLayout>
            <Button
                android:id="@+id/changeTtsLangBut"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lang_sel_btn_height"
                android:textSize="@dimen/lang_sel_btn_txt_size"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/lang_sel_btn_tts_margin_top"
                android:layout_marginBottom="@dimen/lang_sel_btn_voice_margin_bottom"
                android:paddingLeft="@dimen/lang_sel_btn_padding_horizontal"
                android:paddingRight="@dimen/lang_sel_btn_padding_horizontal"
                android:text="Set TTS engine language"
                tools:ignore="HardcodedText" />
            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Step 4: Click \'Apply changes\' to set new language as default"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                style="@style/defaultTextViewStyle"
                tools:ignore="HardcodedText" />
            <Button
                android:id="@+id/saveBut"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lang_sel_btn_height"
                android:textSize="@dimen/lang_sel_btn_txt_size"
                android:layout_marginBottom="@dimen/lang_sel_tv_margin_bottom"
                android:paddingLeft="@dimen/lang_sel_btn_padding_horizontal"
                android:paddingRight="@dimen/lang_sel_btn_padding_horizontal"
                android:text="Apply Changes"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
