...
        android:textSize="@dimen/profile_save_btn_txt_size"
        android:id="@+id/save_baord"
        android:layout_alignParentLeft="true"
        />
    <Button
        android:id="@+id/cancel_save_baord"
        android:text="@string/cancel"
        android:layout_width="@dimen/edit_board_button_width"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:textAllCaps="false"
        android:layout_gravity="center_vertical"
        android:layout_height="@dimen/profile_save_btn_height"
...
