...
                        android:paddingLeft="54dp"
                        android:paddingRight="64dp"
                        android:fontFamily="fonts/Mukta-Regular.ttf"
                        android:textStyle="bold"
                        android:textSize="10dp"
                        android:onClick="getStarted3"
                        android:text="@string/download"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvkc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboardControl"
...
